index do sistema

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 		
 		</br> 
 		<div id = "botao">
-		<a href = "/dununcias" class="waves-effect waves-light btn orange darken-2"> Denuncie já!</a>
+		<a href = "/denuncias" class="waves-effect waves-light btn orange darken-2"> Denuncie já!</a>
 		</div>
 		
 		<h5 style = "font-size: 33px; font-family: Candara Light; color: black; margin-top: 27%; text-align: center;"> PASSOS PARA DENUNCIAR  </h5> 
