--- a/templates/login.html
+++ b/templates/login.html
@@ -1,36 +1,48 @@
 {% extends "base.html" %}
+{% block titulo %}
+Cidade reclama - faca o seu login
+{% endblock titulo %}
+{% block nav %}
+<nav class="blue">
+        <div class="nav-wrapper">
+            <a href="/" class="brand-logo">Logo</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="/">Home</a></li>
+                <li><a href="/mapa">Mapa</a></li>
+                <li><a href="/cadastro">Cadastro</a></li>
+                <li><a href="/login">Login</a></li>
+            </ul>
+        </div>
+    </nav>
+{% endblock nav %}
 
-{% block css %}
-    <div style= "background-color: blue;">  </div>
-{% endblock css %}
+
 
 {% block conteudo %}
+    <div class="row">
+            <div class="col s12 m4 offset-m4">
+                <div class="card">
+                    <div class="card-action cyan darken-1 white-text">
+                        <h3> L0GIN </h3>
+                    </div>
 
-<div class="row">
-        <div class="col s12 m4 offset-m4">
-            <div class="card">
-                <div class="card-action cyan darken-1 white-text">
-                    <h3> CADASTRO </h3>
+                <form action="" method="POST">
+                    {{ form.csrf_token }}
+                    
+                    <div class="form-field">
+                        <label>Usuário</label>
+                        {{ form.usuario (_class="form-control", placeholder="Usuário" ) }}
+                    </div>
+
+
+                    <div class= "form-field">
+                        <label>Senha</label>
+                            {{ form.senha (_class="form-control", placeholder="Senha" ) }}
+                    </div>
+                    <button type="submit" class= "btn-floating btn-large waves-effect waves-light red"></button>
+                </form>
                 </div>
-
-
-    <form action="" method="POST">
-        {{ form.csrf_token }}
-        <div class="form-field">
-            <label>Usuario</label>
-            {{ form.usuario (_class="form-control", placeholder="seu_usuario" ) }}
-        </div>
-
-
-        <div class= "form-field">
-            <label>Senha</label>
-            {{ form.senha(_class="form-control")}}
-        </div>
-        <div class="checkbox">
-            <label>
-                {{ form.lembrar_senha}} Lembrar-me
-            </label>
-        </div>
-        <button type="submit" class= "btn-floating btn-large waves-effect waves-light red"></button>
-    </form>
+            </div>
+    </div>
 {% endblock conteudo %}
