cadastro do sistema

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1,8 +1,23 @@
 {% extends "base.html" %}
 
-{% block conteudo %}
+{% block nav %}
+<nav class="blue">
+        <div class="nav-wrapper">
+            <a href="/" class="brand-logo">Logo</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="/">Home</a></li>
+                <li><a href="/mapa">Mapa</a></li>
+                <li><a href="/cadastro">Cadastro</a></li>
+                <li><a href="/login">Login</a></li>
+            </ul>
+        </div>
+    </nav>
+{% endblock nav %}
+
    
 
+{% block conteudo %}
 
         <div class="row">
             <div class="col s12 m4 offset-m4">
