--- a/templates/mapa.html
+++ b/templates/mapa.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+
+<html>
+
+<head>
+  <title>Pointer</title>
+  <meta charset='utf-8' />
+  <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no"> 
+  <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.css" />
+  <script src="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.js"></script>
+</head>
+
 <style>
 
 #mapDiv {
@@ -13,9 +25,13 @@
 
 </style>
 
-
+<body>
+	<div  id="mapDiv" ></div>
+</body>
 
 <script>
+
+  
 
 function onMapClick(e) {
     var lat  = e.latlng.lat.toFixed(5);
@@ -72,3 +88,4 @@ map.on('click', onMapClick);
 	
 </script>
 
+</html>
