--- a/templates/_Nav.html
+++ b/templates/_Nav.html
@@ -1,10 +1,9 @@
 <nav class="transparent">
     <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Logo</a>
+        <a href="/" class="brand-logo"></a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="/">Home</a></li>
-            <li><a href="/mapa">Mapa</a></li>
             <li><a href="/cadastro">Cadastro</a></li>
             <li><a href="/login">Login</a></li>
         </ul>
