--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
+
 {% block titulo %}
-Cidade reclama - faca o seu login
+    CR - Faça o seu login
 {% endblock titulo %}
+
 {% block nav %}
-<nav class="blue">
+<nav class="#263238 blue-grey darken-4">
         <div class="nav-wrapper">
-            <a href="/" class="brand-logo">Logo</a>
+            <img style = "width: 65px; height: 65px; border-radius: 200px;" src = "{{ url_for('static', filename='_imagens/logo.jpeg') }}" />
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="/">Home</a></li>
-                <li><a href="/mapa">Mapa</a></li>
                 <li><a href="/cadastro">Cadastro</a></li>
                 <li><a href="/login">Login</a></li>
             </ul>
@@ -23,7 +24,7 @@ Cidade reclama - faca o seu login
     <div class="row">
             <div class="col s12 m4 offset-m4">
                 <div class="card">
-                    <div class="card-action cyan darken-1 white-text">
+                    <div class="card-action #263238 blue-grey darken-4 white-text">
                         <h3> L0GIN </h3>
                     </div>
 
@@ -40,7 +41,7 @@ Cidade reclama - faca o seu login
                         <label>Senha</label>
                             {{ form.senha (_class="form-control", placeholder="Senha" ) }}
                     </div>
-                    <button type="submit" class= "btn-floating btn-large waves-effect waves-light red"></button>
+                    <button type="submit" class= "btn-floating btn-large waves-effect waves-light #263238 blue-grey darken-4"> Enviar</button>
                 </form>
                 </div>
             </div>
