--- a/templates/_Rodape.html
+++ b/templates/_Rodape.html
@@ -1,31 +1,36 @@
 <!-- Footer -->
-
-<footer class="page-footer #263238 blue-grey darken-4);">
-    <div class="container ">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text ">CIDADE RECLAMA</h5>
-          <p class="white-text text-lighten-4;" style = "text-align: justify;">Ficou com alguma dúvida e quer entrar em contato conosco? Mande uma mensagem para o nosso email ou ligue ;) </p>
-        </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">CONTATO:</h5>
-          <ul>
-            <li><a class="white-text text-lighten-3" href="#!">stellasilva@gmail.com</a></li>
-            <li><a class="white-text text-lighten-3" href="#!">evasantos@gmail.com</a></li>
-          </ul>
-            <h5 class="white-text">TELEFONE:</h5>
-            <a class="white-text text-lighten-3" href="#!">(77)991929046</a> </br>
-            <a class="white-text text-lighten-3" href="#!">(77)991482596</a>
-        </div>
+<footer class="page-footer #263238 blue-grey darken-4">
+  <div class="container ">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text ">CIDADE RECLAMA</h5>
+        <p class="white-text text-lighten-4;" style = "text-align: justify;">Ficou com alguma dúvida e quer entrar em contato conosco? Mande uma mensagem para o nosso email ou ligue ;) </p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">CONTATO:</h5>
+        <ul>
+          <li><a class="white-text text-lighten-3" href="#!">stellasilva@gmail.com</a></li>
+          <li><a class="white-text text-lighten-3" href="#!">evasantos@gmail.com</a></li>
+        </ul>
+        <h5 class="white-text">TELEFONE:</h5>
+          <a class="white-text text-lighten-3" href="#!">(77)991929046</a> </br>
+          <a class="white-text text-lighten-3" href="#!">(77)991482596</a>
       </div>
     </div>
-    
+  </div>
   
-    <div class="footer-copyright #263238 blue-grey darken-4">
-      <div class="container">
+  <div class="footer-copyright #263238 blue-grey darken-3">
+    <div class="container">
       © 2019 Copyright Text
-      </div>
     </div>
-  </footer>
-  
+
+    <div class="container">
+      Pindaí - BA
+    </div>
+
+    <div class="container">
+      46360-000
+    </div>
+  </div>
+</footer>
 <!-- Fim Footer -->
