--- a/templates/index.html
+++ b/templates/index.html
@@ -51,13 +51,13 @@
 		<table style = "margin-top: -45%;">
 			<tr>
 				<td><img style = "width: 120px; height: 120px; border-radius: 200px; margin-left: 70%; margin-top: -5%; " src = "{{ url_for('static', filename='_imagens/stella.jpeg') }}" /> </td>
-				<td><p style = "font-size: 15px; text-align: justify; padding: 15%;"> Me chamo Stella Ribas, tenho 17 anos, estudo no Instituto Federal de Educação, Ciência e Tecnologia Baiano, Campus Guanambi. Sou ingressada no segundo ano do ensino médio e curso o técnico Informática p/ Internet. Foi uma honra desenvolver este site. Espero que ele seja bastante útil e atinja o seu objetivo, facilidade ao reclamar de algum lugar com condições inadequadas na sua cidade. Foi complexo o desenvolvimento do mesmo, usamos diferentes linguagens de programação, porém tivemos êxito no final do projeto.</p></td>
+				<td><p style = "font-size: 15px; text-align: justify; padding: 15%;"> Chamo-me Stella Ribas, tenho 17 anos, estudo no Instituto Federal de Educação, Ciência e Tecnologia Baiano, Campus Guanambi. Sou ingressada no segundo ano do ensino médio e curso o técnico Informática p/ Internet. Foi uma honra desenvolver este site. Espero que ele seja bastante útil e atinja o seu objetivo, facilidade ao reclamar de algum lugar com condições inadequadas na sua cidade. Foi complexo o desenvolvimento do mesmo, usamos diferentes linguagens de programação, porém tivemos êxito no final do projeto.</p></td>
 			</tr>
 		</table>
 
 		<table style = "margin-top: -11%;">
 			<tr>
-				<td><p style = "font-size: 15px; text-align: justify; padding: 15%;"> Me chamo Eva Milena, tenho 16 anos, estudo no
+				<td><p style = "font-size: 15px; text-align: justify; padding: 15%;"> Chamo-me Eva Milena, tenho 16 anos, estudo no
 					Instituto Federal de Educação, Ciência e Tecnologia Baiano, Campus Guanambi. Sou ingressada no segundo ano do ensino médio, no curso Informática p/ Internet. Ao decorrer do desenvolvimento do sistema, passamos por vários perrengues, mas nosso objetivo de ajudar a sociedade com uma plataforma eficiente não nos limitou. Espero ajudá-los da melhor forma com o nosso projeto. </p></td>		
 				<td><img style = "width: 120px; height: 120px; border-radius: 200px; margin-left: -70%;" src = "{{ url_for('static', filename='_imagens/eva.jpeg') }}" /> </td>
 			</tr>
